# binsafe

./: .gitignore  Cargo.toml  LICENSE  README.md  TEMPORARY.md  binsafe.rs  example.tape
.github/workflows/: generate-example.yml
logger/src/: lib.rs
obfuscator/: Cargo.toml
obfuscator/src/: args.rs  engine.rs  exceptions.rs  lib.rs  main.rs
obfuscator/src/protections/: mod.rs  mutation.rs  virtualization.rs
obfuscator/src/protections/virtualization/: attestation.rs  crypt.rs  language.rs  mod.rs  virtualization.rs
obfuscator/src/protections/virtualization/attestation/: anti_debug.rs  anti_tamper.rs  debug.rs  mod.rs
obfuscator/src/protections/virtualization/transforms/: anti_debug.rs  mod.rs
runtime/: Cargo.toml
runtime/src/: assembler.rs  debug.rs  emitter.rs  flags.rs  lib.rs  mapper.rs  mba.rs  runtime.rs
runtime/src/functions/: compare_ansi.rs  compare_ansi_to_ansi.rs  compare_unicode_to_ansi.rs  exception_handler.rs  fmtdec.rs  format.rs  get_proc_address.rs  hash.rs  mod.rs  print.rs  resolve.rs  strlen.rs
runtime/src/vm/: bytecode.rs  cleanup.rs  crypt.rs  dispatch.rs  dispatcher.rs  diversify.rs  encrypt.rs  entry.rs  entry_point.rs  exit.rs  ginit.rs  initialize.rs  mod.rs  mutation.rs  permute.rs  search.rs  sib.rs  snapshot.rs  stack.rs  tinit.rs  veh.rs
runtime/src/vm/encoders/: add.rs  add_carry.rs  and.rs  arithmetic.rs  bit_scan_reverse.rs  bit_test.rs  bit_test_complement.rs  branch.rs  (+67 more)
shared/src/: constants.rs
tests/: Cargo.toml
tests/src/: constants.rs  emitter.rs  instructions.rs  instrumentation.rs  lib.rs  permutation.rs
(+190 files in other folders)
