[package]
name = "obfuscator"
version = "0.1.0"
edition = "2021"

[dependencies]
exe = "0.5.6"
iced-x86 = { version = "1.21.0", features = ["code_asm"] }
rand = "0.8.5"
clap = { version = "4.5.53", features = ["derive"] }
logger = { path = "../logger" }
shared = { path = "../shared" }
runtime = { path = "../runtime" }
