[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[dependencies]
runtime = { path = "../runtime" }
obfuscator = { path = "../obfuscator" }
iced-x86 = { version = "1.21.0", features = ["code_asm"] }
paste = "1"
rand = "0.8"
windows = { version = "0.62.2", features = [
    "Win32_System_Memory",
    "Win32_System_Threading",
] }
