[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[dependencies]
runtime = { path = "../runtime" }
obfuscator = { path = "../obfuscator" }
iced-x86 = { version = "1.21.0", features = ["code_asm"] }
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_Debug_Extensions",
    "Win32_System_Kernel",
    "Win32_System_Memory",
    "Win32_System_Threading",
] }
